src/test/deca/context/valid/printlnx.deca
class A {
float x;
}
{
A a = new A();
printlnx(a.x);
}