src/test/deca/context/invalid/decl_class_extend.deca
class A{
}
class C{
}
{
A a = new A();
A c = new C();
}